list, update, delete for admin paintings

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,5 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/art_gallery
 spring.datasource.username=artmanager
 spring.datasource.password=ArtOfFreePeople
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.mvc.hiddenmethod.filter.enabled=true
 #spring.jpa.show-sql: true
